--- a/assignment-1/package.json
+++ b/assignment-1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "athenaeum",
   "version": "1.0.0",
-  "description": "Command line interface for a "fake" bookstore",
+  "description": "Command line interface for a fake bookstore",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
